--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "material-table",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "author": "Mike Guzman",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": ["dist","README.md"],
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",    
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __test__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +29,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
   }
 }
