--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "module": "dist/index.js",
   "files": ["dist","README.md"],
   "repository": {
-    
+    "type":"git",
+    "url": "https://github.com/harryconsul/material-table"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",    
+    "@material-ui/icons": "^3.0.2"    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +38,6 @@
     "babel-cli": "^6.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.0.1"
   }
 }
