--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "custom-columns-table",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Mike Guzman",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": ["dist","README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
-    "type":"git",
+    "type": "git",
     "url": "https://github.com/harryconsul/custom-columns-table"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2"    
+    "@material-ui/icons": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
